--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "demo",
   "scripts": {
-    "start": "webpack --config webpack.config.js",
-    "dev": "webpack --mode development"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server --open --config webpack.config.js"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -12,6 +12,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
     "iview": "^3.3.0-rc.1",
     "scss": "^0.2.4",
     "vue": "^2.6.8",
@@ -20,6 +21,7 @@
     "vue-template-compiler": "^2.6.8",
     "vuex": "^3.1.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   }
 }
