--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^2.1.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "iview": "^3.3.0-rc.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "scss": "^0.2.4",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
     "vue-router": "^3.0.2",
