--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --mode development",
     "dev": "webpack-dev-server --open --config webpack.config.js"
   },
   "devDependencies": {
@@ -13,9 +13,12 @@
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "iview": "^3.3.0-rc.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
     "scss": "^0.2.4",
     "style-loader": "^0.23.1",
