--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "iview": "^3.3.0-rc.1",
     "mini-css-extract-plugin": "^0.5.0",
@@ -28,6 +29,7 @@
     "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
     "vue-router": "^3.0.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.8",
     "vuex": "^3.1.0",
     "webpack": "^4.29.6",
